--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "passport": "^0.4.0",
+    "passport-oauth2": "^1.4.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
