--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express": "^4.15.2",
     "googleapis": "^27.0.0",
     "js-base64": "^2.4.9",
+    "mimemessage": "^1.0.5",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.4",
+    "node-gmail-api": "^0.6.1",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
     "promisify": "0.0.3"
