--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.1.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-vue": "^5.8.2",
     "googleapis": "^27.0.0",
     "js-base64": "^2.4.9",
     "mimemessage": "^1.0.5",
@@ -24,7 +25,8 @@
     "node-gmail-api": "^0.6.1",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
-    "promisify": "0.0.3"
+    "promisify": "0.0.3",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "request": "^2.81.0",
