--- a/package.json
+++ b/package.json
@@ -12,18 +12,26 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "cookieparser": "^0.1.0",
     "dotenv": "^6.1.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-json-csv": "0.0.3",
+    "express-session": "^1.15.6",
     "express-vue": "^5.8.2",
     "googleapis": "^27.0.0",
     "js-base64": "^2.4.9",
     "mimemessage": "^1.0.5",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.4",
+    "mongoose-unique-validator": "^2.0.2",
     "node-gmail-api": "^0.6.1",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
     "promisify": "0.0.3",
     "pug": "^2.0.3"
