--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "pug": "^2.0.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
