--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-vue": "^5.8.2",
     "googleapis": "^27.0.0",
     "js-base64": "^2.4.9",
+    "jsonwebtoken": "^8.5.1",
     "mimemessage": "^1.0.5",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.4",
